--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -30,4 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:gridlayout-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.0.0"
 }
