added basic Room database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
+        android:name="ru.dellirium.poecurrencysimulator.items.affixes.AffixDbSingleton"
         android:allowBackup="false">
         <activity android:name=".MainActivity">
             <intent-filter>
