--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.0.0"
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
